--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="details.html">Details</a>
+            <a href="our_story.html">Our Story</a>
             <a href="contact_us.html">Contact Us</a>
             <a href="location.html">Location</a>
         </nav>
@@ -26,6 +27,12 @@
         </section>
     </main>
     <footer>
+        <div class="social">
+            <a href="https://www.instagram.com/albaik/?hl=ar" target="_blank">
+                <img src="images/instagram_logo.png" alt="Instagram" class="icon">
+            </a>
+            <p>Phone: 800 244 2245 | Email: <a href="mailto:info@albaik.com">info@albaik.com</a></p>
+        </div>
         <p>&copy; 2024 Albaik. All rights reserved.</p>
     </footer>
 </body>
