--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,7 @@
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="details.html">Details</a>
+            <a href="our_story.html">Our Story</a>
             <a href="contact_us.html">Contact Us</a>
             <a href="location.html">Location</a>
         </nav>
@@ -22,22 +23,49 @@
         <table>
             <tr>
                 <th>Dish</th>
+                <th>Image</th>
                 <th>Description</th>
                 <th>Price</th>
             </tr>
             <tr>
-                <td>Spicy Chicken</td>
-                <td>Golden crispy chicken with a spicy kick</td>
-                <td>$5.99</td>
+                <td>10 Piece Chicken Nuggets</td>
+                <td><img src="images/10_Piece_Chicken_Nuggets_Meal.png" alt="Chicken Nuggets"></td>
+                <td>Crispy chicken nuggets, served with dipping sauce.</td>
+                <td>$7.99</td>
             </tr>
             <tr>
-                <td>Garlic Sauce</td>
-                <td>Creamy garlic dip to complement your meal</td>
-                <td>$0.99</td>
+                <td>8 Piece Chicken Meal</td>
+                <td><img src="images/ALBAIK_8_Piece_Chicken_Meal.png" alt="8 Piece Chicken Meal"></td>
+                <td>Juicy fried chicken with signature seasoning.</td>
+                <td>$14.99</td>
+            </tr>
+            <tr>
+                <td>Fish Fillet Burger</td>
+                <td><img src="images/Fish_Fillet_Burger.png" alt="Fish Fillet Burger"></td>
+                <td>Delicious fish fillet with tartar sauce.</td>
+                <td>$6.99</td>
+            </tr>
+            <tr>
+                <td>Vanilla Ice Cream</td>
+                <td><img src="images/Vanilla_Ice_Cream.png" alt="Vanilla Ice Cream"></td>
+                <td>Classic vanilla ice cream served chilled.</td>
+                <td>$2.99</td>
+            </tr>
+            <tr>
+                <td>Pepsi</td>
+                <td><img src="images/Pepsi.png" alt="Pepsi"></td>
+                <td>Refreshing cold drink to complement your meal.</td>
+                <td>$1.99</td>
             </tr>
         </table>
     </main>
     <footer>
+        <div class="social">
+            <a href="https://www.instagram.com/albaik/?hl=ar" target="_blank">
+                <img src="images/instagram_logo.png" alt="Instagram" class="icon">
+            </a>
+            <p>Phone: 800 244 2245 | Email: <a href="mailto:info@albaik.com">info@albaik.com</a></p>
+        </div>
         <p>&copy; 2024 Albaik. All rights reserved.</p>
     </footer>
 </body>
