--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
             </a>
             <p>Phone: 800 244 2245 | Email: <a href="mailto:info@albaik.com">info@albaik.com</a></p>
         </div>
-        <p>&copy; 2024 Albaik. All rights reserved.</p>
+        <div class="copyright">
+            <p>&copy; 2024 Albaik. All rights reserved.</p>
+            <p>Student Name: Muaz Muhamed | Student Number: 301154451</p>
+            <p>Assignment: Individual Project - Create a website for a small business</p>
+            <p>Logos and photos retrieved from the Albaik website.</p>
+        </div>
     </footer>
 </body>
 </html>
