--- a/menu.html
+++ b/menu.html
@@ -30,32 +30,26 @@
             <tr>
                 <td>10 Piece Chicken Nuggets</td>
                 <td><img src="images/10_Piece_Chicken_Nuggets_Meal.png" alt="Chicken Nuggets"></td>
-                <td>Crispy and golden chicken nuggets served with your choice of dipping sauce. Perfect for a quick snack or a meal.</td>
+                <td>Crispy and golden chicken nuggets served with dipping sauce.</td>
                 <td>$7.99</td>
             </tr>
             <tr>
                 <td>8 Piece Chicken Meal</td>
                 <td><img src="images/ALBAIK_8_Piece_Chicken_Meal.png" alt="8 Piece Chicken Meal"></td>
-                <td>Juicy fried chicken with our signature seasoning, served with fries and a bun. A fulfilling and delicious meal.</td>
+                <td>Juicy fried chicken with signature seasoning.</td>
                 <td>$14.99</td>
             </tr>
             <tr>
                 <td>Fish Fillet Burger</td>
                 <td><img src="images/Fish_Fillet_Burger.png" alt="Fish Fillet Burger"></td>
-                <td>A delicious fish fillet patty topped with lettuce and creamy tartar sauce, served in a toasted bun.</td>
+                <td>Delicious fish fillet with tartar sauce.</td>
                 <td>$6.99</td>
             </tr>
             <tr>
                 <td>Chocolate Ice Cream</td>
                 <td><img src="images/Chocolate_Ice_Cream.png" alt="Chocolate Ice Cream"></td>
-                <td>Rich and creamy chocolate ice cream, the perfect treat to cool off your day.</td>
+                <td>Rich and creamy chocolate ice cream.</td>
                 <td>$2.99</td>
-            </tr>
-            <tr>
-                <td>Pepsi</td>
-                <td><img src="images/Pepsi.png" alt="Pepsi"></td>
-                <td>A refreshing cold drink to perfectly complement your meal.</td>
-                <td>$1.99</td>
             </tr>
         </table>
     </main>
