--- a/details.html
+++ b/details.html
@@ -13,20 +13,33 @@
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="details.html">Details</a>
+            <a href="our_story.html">Our Story</a>
             <a href="contact_us.html">Contact Us</a>
             <a href="location.html">Location</a>
         </nav>
     </header>
     <main>
         <h2>Dish Details</h2>
-        <article>
-            <h3>Spicy Chicken</h3>
-            <img src="images/dish1.jpg" alt="Spicy Chicken">
-            <p>A delicious blend of spices with crispy chicken. Price: $5.99</p>
-        </article>
+        <div class="dish">
+            <h3>10 Piece Chicken Nuggets</h3>
+            <img src="images/10_Piece_Chicken_Nuggets_Meal.png" alt="Chicken Nuggets">
+            <p>Crispy and golden chicken nuggets served with your choice of dipping sauce.</p>
+            <p><strong>Price:</strong> $7.99</p>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Albaik. All rights reserved.</p>
+        <div class="social">
+            <a href="https://www.instagram.com/albaik/?hl=ar" target="_blank">
+                <img src="images/instagram_logo.png" alt="Instagram" class="icon">
+            </a>
+            <p>Phone: 800 244 2245 | Email: <a href="mailto:info@albaik.com">info@albaik.com</a></p>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 Albaik. All rights reserved.</p>
+            <p>Student Name: Muaz Muhamed | Student Number: 301154451</p>
+            <p>Assignment: Individual Project - Create a website for a small business</p>
+            <p>Logos and photos retrieved from the Albaik website.</p>
+        </div>
     </footer>
 </body>
 </html>
