--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h2>Our Menu</h2>
-        <table>
+        <table class="menu-table">
             <tr>
                 <th>Dish</th>
                 <th>Image</th>
@@ -44,12 +44,6 @@
                 <td><img src="images/Fish_Fillet_Burger.png" alt="Fish Fillet Burger"></td>
                 <td>Delicious fish fillet with tartar sauce.</td>
                 <td>$6.99</td>
-            </tr>
-            <tr>
-                <td>Chocolate Ice Cream</td>
-                <td><img src="images/Chocolate_Ice_Cream.png" alt="Chocolate Ice Cream"></td>
-                <td>Rich and creamy chocolate ice cream.</td>
-                <td>$2.99</td>
             </tr>
         </table>
     </main>
