--- a/details.html
+++ b/details.html
@@ -22,7 +22,7 @@
         <h2>Dish Details</h2>
         <div class="dish">
             <h3>10 Piece Chicken Nuggets</h3>
-            <img src="images/10_Piece_Chicken_Nuggets_Meal.png" alt="Chicken Nuggets">
+            <img src="images/10_Piece_Chicken_Nuggets_Meal.png" alt="Chicken Nuggets" class="detail-image">
             <p>Crispy and golden chicken nuggets served with your choice of dipping sauce.</p>
             <p><strong>Price:</strong> $7.99</p>
         </div>
